<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/Drawer_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">


                <TextView
                    android:id="@+id/mensaje_inicial"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="32dp"
                    android:layout_weight="1"
                    android:padding="20sp"
                    android:text="@string/mensaje_inicial"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="34sp"
                    android:textStyle="bold"/>



            </LinearLayout>



        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/Navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/cabecera_menu"
            app:menu="@menu/lateral" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <TextView
        android:id="@+id/balanceTv"
        android:layout_width="358dp"
        android:layout_height="118dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="0,00$"
        android:textAlignment="center"
        app:autoSizeMaxTextSize="60sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="111dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818">

        <Button
            android:id="@+id/boton_ingreso_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/boton_Ingreso"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/boton_gasto_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:backgroundTint="#F44336"
            android:text="@string/boton_gasto"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>